v2/packages.md
Package Versions for v2
================

This r:v2 OpenSAFELY image is based on Ubuntu 22.04 with R 4.4.3.

## R packages

The image comes pre-installed with a set of R packages listed in the
table below. Some packages may no longer be on CRAN and so their URL
below will link to the archive of that package’s source code. Each image
also contains the 14 base R packages (base, compiler, datasets,
grDevices, graphics, grid, methods, parallel, splines, stats, stats4,
tcltk, tools, and utils) for the respective version of R.

| Package               | Version       | Url                                                        |
| :-------------------- | :------------ | :--------------------------------------------------------- |
| abind                 | 1.4-8         | <https://cran.r-project.org/package=abind>                 |
| anytime               | 0.3.11        | <https://cran.r-project.org/package=anytime>               |
| ape                   | 5.8-1         | <https://cran.r-project.org/package=ape>                   |
| arrow                 | 19.0.1        | <https://cran.r-project.org/package=arrow>                 |
| ash                   | 1.0-15        | <https://cran.r-project.org/package=ash>                   |
| AsioHeaders           | 1.22.1-2      | <https://cran.r-project.org/package=AsioHeaders>           |
| askpass               | 1.2.1         | <https://cran.r-project.org/package=askpass>               |
| assertthat            | 0.2.1         | <https://cran.r-project.org/package=assertthat>            |
| astsa                 | 2.2           | <https://cran.r-project.org/package=astsa>                 |
| aweek                 | 1.0.3         | <https://cran.r-project.org/package=aweek>                 |
| backports             | 1.5.0         | <https://cran.r-project.org/package=backports>             |
| base64enc             | 0.1-3         | <https://cran.r-project.org/package=base64enc>             |
| base64url             | 1.4           | <https://cran.r-project.org/package=base64url>             |
| BayesianTools         | 0.1.8         | <https://cran.r-project.org/package=BayesianTools>         |
| bayesm                | 3.1-6         | <https://cran.r-project.org/package=bayesm>                |
| bayesplot             | 1.11.1        | <https://cran.r-project.org/package=bayesplot>             |
| bayestestR            | 0.15.2        | <https://cran.r-project.org/package=bayestestR>            |
| bbmle                 | 1.0.25.1      | <https://cran.r-project.org/package=bbmle>                 |
| bdsmatrix             | 1.3-7         | <https://cran.r-project.org/package=bdsmatrix>             |
| BH                    | 1.87.0-1      | <https://cran.r-project.org/package=BH>                    |
| bigD                  | 0.3.0         | <https://cran.r-project.org/package=bigD>                  |
| biglm                 | 0.9-3         | <https://cran.r-project.org/package=biglm>                 |
| binom                 | 1.1-1.1       | <https://cran.r-project.org/package=binom>                 |
| bit                   | 4.5.0.1       | <https://cran.r-project.org/package=bit>                   |
| bit64                 | 4.6.0-1       | <https://cran.r-project.org/package=bit64>                 |
| bitops                | 1.0-9         | <https://cran.r-project.org/package=bitops>                |
| blob                  | 1.2.4         | <https://cran.r-project.org/package=blob>                  |
| boot                  | 1.3-31        | <https://cran.r-project.org/package=boot>                  |
| brew                  | 1.0-10        | <https://cran.r-project.org/package=brew>                  |
| brglm2                | 0.9.2         | <https://cran.r-project.org/package=brglm2>                |
| bridgesampling        | 1.1-2         | <https://cran.r-project.org/package=bridgesampling>        |
| brms                  | 2.22.0        | <https://cran.r-project.org/package=brms>                  |
| Brobdingnag           | 1.2-9         | <https://cran.r-project.org/package=Brobdingnag>           |
| broom                 | 1.0.7         | <https://cran.r-project.org/package=broom>                 |
| broom.helpers         | 1.19.0        | <https://cran.r-project.org/package=broom.helpers>         |
| broom.mixed           | 0.2.9.6       | <https://cran.r-project.org/package=broom.mixed>           |
| bslib                 | 0.9.0         | <https://cran.r-project.org/package=bslib>                 |
| butcher               | 0.3.4         | <https://cran.r-project.org/package=butcher>               |
| ca                    | 0.71.1        | <https://cran.r-project.org/package=ca>                    |
| cachem                | 1.1.0         | <https://cran.r-project.org/package=cachem>                |
| callr                 | 3.7.6         | <https://cran.r-project.org/package=callr>                 |
| car                   | 3.1-3         | <https://cran.r-project.org/package=car>                   |
| carData               | 3.0-5         | <https://cran.r-project.org/package=carData>               |
| cards                 | 0.5.1         | <https://cran.r-project.org/package=cards>                 |
| cardx                 | 0.2.3         | <https://cran.r-project.org/package=cardx>                 |
| caret                 | 7.0-1         | <https://cran.r-project.org/package=caret>                 |
| caTools               | 1.18.3        | <https://cran.r-project.org/package=caTools>               |
| cellranger            | 1.1.0         | <https://cran.r-project.org/package=cellranger>            |
| checkmate             | 2.3.2         | <https://cran.r-project.org/package=checkmate>             |
| chk                   | 0.10.0        | <https://cran.r-project.org/package=chk>                   |
| class                 | 7.3-23        | <https://cran.r-project.org/package=class>                 |
| classInt              | 0.4-11        | <https://cran.r-project.org/package=classInt>              |
| cli                   | 3.6.4         | <https://cran.r-project.org/package=cli>                   |
| clipr                 | 0.8.0         | <https://cran.r-project.org/package=clipr>                 |
| clock                 | 0.7.2         | <https://cran.r-project.org/package=clock>                 |
| clue                  | 0.3-66        | <https://cran.r-project.org/package=clue>                  |
| cluster               | 2.1.8         | <https://cran.r-project.org/package=cluster>               |
| cmprsk                | 2.2-12        | <https://cran.r-project.org/package=cmprsk>                |
| cobalt                | 4.5.5         | <https://cran.r-project.org/package=cobalt>                |
| coda                  | 0.19-4.1      | <https://cran.r-project.org/package=coda>                  |
| codetools             | 0.2-20        | <https://cran.r-project.org/package=codetools>             |
| collections           | 0.3.7         | <https://cran.r-project.org/package=collections>           |
| colorspace            | 2.1-1         | <https://cran.r-project.org/package=colorspace>            |
| commonmark            | 1.9.2         | <https://cran.r-project.org/package=commonmark>            |
| conflicted            | 1.2.0         | <https://cran.r-project.org/package=conflicted>            |
| consort               | 1.2.2         | <https://cran.r-project.org/package=consort>               |
| corpcor               | 1.6.10        | <https://cran.r-project.org/package=corpcor>               |
| corrplot              | 0.95          | <https://cran.r-project.org/package=corrplot>              |
| corrr                 | 0.4.4         | <https://cran.r-project.org/package=corrr>                 |
| cowplot               | 1.1.3         | <https://cran.r-project.org/package=cowplot>               |
| coxme                 | 2.2-22        | <https://cran.r-project.org/package=coxme>                 |
| cpp11                 | 0.5.2         | <https://cran.r-project.org/package=cpp11>                 |
| crayon                | 1.5.3         | <https://cran.r-project.org/package=crayon>                |
| crosstalk             | 1.2.1         | <https://cran.r-project.org/package=crosstalk>             |
| curl                  | 6.2.1         | <https://cran.r-project.org/package=curl>                  |
| dagitty               | 0.3-4         | <https://cran.r-project.org/package=dagitty>               |
| data.table            | 1.17.0        | <https://cran.r-project.org/package=data.table>            |
| datawizard            | 1.0.0         | <https://cran.r-project.org/package=datawizard>            |
| DBI                   | 1.2.3         | <https://cran.r-project.org/package=DBI>                   |
| dbplyr                | 2.5.0         | <https://cran.r-project.org/package=dbplyr>                |
| dd4d                  | 0.0.0.9000    | <https://opensafely-core.r-universe.dev/dd4d>              |
| deldir                | 2.0-4         | <https://cran.r-project.org/package=deldir>                |
| DEoptimR              | 1.1-3-1       | <https://cran.r-project.org/package=DEoptimR>              |
| Deriv                 | 4.1.6         | <https://cran.r-project.org/package=Deriv>                 |
| desc                  | 1.4.3         | <https://cran.r-project.org/package=desc>                  |
| deSolve               | 1.40          | <https://cran.r-project.org/package=deSolve>               |
| detectseparation      | 0.3           | <https://cran.r-project.org/package=detectseparation>      |
| dfidx                 | 0.1-0         | <https://cran.r-project.org/package=dfidx>                 |
| DHARMa                | 0.4.7         | <https://cran.r-project.org/package=DHARMa>                |
| diagram               | 1.6.5         | <https://cran.r-project.org/package=diagram>               |
| DiagrammeR            | 1.0.11        | <https://cran.r-project.org/package=DiagrammeR>            |
| dials                 | 1.4.0         | <https://cran.r-project.org/package=dials>                 |
| DiceDesign            | 1.10          | <https://cran.r-project.org/package=DiceDesign>            |
| digest                | 0.6.37        | <https://cran.r-project.org/package=digest>                |
| distributional        | 0.5.0         | <https://cran.r-project.org/package=distributional>        |
| doBy                  | 4.6.25        | <https://cran.r-project.org/package=doBy>                  |
| doFuture              | 1.0.1         | <https://cran.r-project.org/package=doFuture>              |
| doParallel            | 1.0.17        | <https://cran.r-project.org/package=doParallel>            |
| dplyr                 | 1.1.4         | <https://cran.r-project.org/package=dplyr>                 |
| DT                    | 0.33          | <https://cran.r-project.org/package=DT>                    |
| dtplyr                | 1.3.1         | <https://cran.r-project.org/package=dtplyr>                |
| dtw                   | 1.23-1        | <https://cran.r-project.org/package=dtw>                   |
| dtwclust              | 6.0.0         | <https://cran.r-project.org/package=dtwclust>              |
| duckdb                | 1.2.0         | <https://cran.r-project.org/package=duckdb>                |
| e1071                 | 1.7-16        | <https://cran.r-project.org/package=e1071>                 |
| effectsize            | 1.0.0         | <https://cran.r-project.org/package=effectsize>            |
| egg                   | 0.4.5         | <https://cran.r-project.org/package=egg>                   |
| ellipse               | 0.5.0         | <https://cran.r-project.org/package=ellipse>               |
| emmeans               | 1.10.7        | <https://cran.r-project.org/package=emmeans>               |
| emulator              | 1.2-24        | <https://cran.r-project.org/package=emulator>              |
| enrichwith            | 0.3.1         | <https://cran.r-project.org/package=enrichwith>            |
| Epi                   | 2.59          | <https://cran.r-project.org/package=Epi>                   |
| epitools              | 0.5-10.1      | <https://cran.r-project.org/package=epitools>              |
| estimability          | 1.5.1         | <https://cran.r-project.org/package=estimability>          |
| estimatr              | 1.0.6         | <https://cran.r-project.org/package=estimatr>              |
| etm                   | 1.1.1         | <https://cran.r-project.org/package=etm>                   |
| evaluate              | 1.0.3         | <https://cran.r-project.org/package=evaluate>              |
| exactRankTests        | 0.8-35        | <https://cran.r-project.org/package=exactRankTests>        |
| expm                  | 1.0-0         | <https://cran.r-project.org/package=expm>                  |
| fansi                 | 1.0.6         | <https://cran.r-project.org/package=fansi>                 |
| farver                | 2.1.2         | <https://cran.r-project.org/package=farver>                |
| fastDummies           | 1.7.5         | <https://cran.r-project.org/package=fastDummies>           |
| fastGHQuad            | 1.0.1         | <https://cran.r-project.org/package=fastGHQuad>            |
| fastmap               | 1.2.0         | <https://cran.r-project.org/package=fastmap>               |
| fastshap              | 0.1.1         | <https://cran.r-project.org/package=fastshap>              |
| fda                   | 6.2.0         | <https://cran.r-project.org/package=fda>                   |
| fds                   | 1.8           | <https://cran.r-project.org/package=fds>                   |
| finalfit              | 1.0.8         | <https://cran.r-project.org/package=finalfit>              |
| flexclust             | 1.5.0         | <https://cran.r-project.org/package=flexclust>             |
| flexsurv              | 2.3.2         | <https://cran.r-project.org/package=flexsurv>              |
| FNN                   | 1.1.4.1       | <https://cran.r-project.org/package=FNN>                   |
| fontawesome           | 0.5.3         | <https://cran.r-project.org/package=fontawesome>           |
| fontBitstreamVera     | 0.1.1         | <https://cran.r-project.org/package=fontBitstreamVera>     |
| fontLiberation        | 0.1.0         | <https://cran.r-project.org/package=fontLiberation>        |
| fontquiver            | 0.2.1         | <https://cran.r-project.org/package=fontquiver>            |
| forcats               | 1.0.0         | <https://cran.r-project.org/package=forcats>               |
| foreach               | 1.5.2         | <https://cran.r-project.org/package=foreach>               |
| forecast              | 8.23.0        | <https://cran.r-project.org/package=forecast>              |
| foreign               | 0.8-88        | <https://cran.r-project.org/package=foreign>               |
| forestplot            | 3.1.6         | <https://cran.r-project.org/package=forestplot>            |
| forestploter          | 1.1.2         | <https://cran.r-project.org/package=forestploter>          |
| Formula               | 1.2-5         | <https://cran.r-project.org/package=Formula>               |
| formula.tools         | 1.7.1         | <https://cran.r-project.org/package=formula.tools>         |
| fracdiff              | 1.5-3         | <https://cran.r-project.org/package=fracdiff>              |
| fs                    | 1.6.5         | <https://cran.r-project.org/package=fs>                    |
| furrr                 | 0.3.1         | <https://cran.r-project.org/package=furrr>                 |
| future                | 1.34.0        | <https://cran.r-project.org/package=future>                |
| future.apply          | 1.11.3        | <https://cran.r-project.org/package=future.apply>          |
| fuzzyjoin             | 0.1.6         | <https://cran.r-project.org/package=fuzzyjoin>             |
| gap                   | 1.6           | <https://cran.r-project.org/package=gap>                   |
| gap.datasets          | 0.0.6         | <https://cran.r-project.org/package=gap.datasets>          |
| gargle                | 1.5.2         | <https://cran.r-project.org/package=gargle>                |
| gclus                 | 1.3.2         | <https://cran.r-project.org/package=gclus>                 |
| geepack               | 1.3.12        | <https://cran.r-project.org/package=geepack>               |
| generics              | 0.1.3         | <https://cran.r-project.org/package=generics>              |
| geosphere             | 1.5-20        | <https://cran.r-project.org/package=geosphere>             |
| getopt                | 1.20.4        | <https://cran.r-project.org/package=getopt>                |
| gets                  | 0.38          | <https://cran.r-project.org/package=gets>                  |
| ggalluvial            | 0.12.5        | <https://cran.r-project.org/package=ggalluvial>            |
| GGally                | 2.2.1         | <https://cran.r-project.org/package=GGally>                |
| ggdist                | 3.3.2         | <https://cran.r-project.org/package=ggdist>                |
| ggeffects             | 2.2.0         | <https://cran.r-project.org/package=ggeffects>             |
| ggfittext             | 0.10.2        | <https://cran.r-project.org/package=ggfittext>             |
| ggfortify             | 0.4.17        | <https://cran.r-project.org/package=ggfortify>             |
| gggenes               | 0.5.1         | <https://cran.r-project.org/package=gggenes>               |
| ggh4x                 | 0.3.0         | <https://cran.r-project.org/package=ggh4x>                 |
| ggplot2               | 3.5.1         | <https://cran.r-project.org/package=ggplot2>               |
| ggpubr                | 0.6.0         | <https://cran.r-project.org/package=ggpubr>                |
| ggrepel               | 0.9.6         | <https://cran.r-project.org/package=ggrepel>               |
| ggridges              | 0.5.6         | <https://cran.r-project.org/package=ggridges>              |
| ggsci                 | 3.2.0         | <https://cran.r-project.org/package=ggsci>                 |
| ggsignif              | 0.6.4         | <https://cran.r-project.org/package=ggsignif>              |
| ggstats               | 0.8.0         | <https://cran.r-project.org/package=ggstats>               |
| ggtext                | 0.1.2         | <https://cran.r-project.org/package=ggtext>                |
| ggvenn                | 0.1.10        | <https://cran.r-project.org/package=ggvenn>                |
| gh                    | 1.4.1         | <https://cran.r-project.org/package=gh>                    |
| gitcreds              | 0.1.2         | <https://cran.r-project.org/package=gitcreds>              |
| glmmTMB               | 1.1.10        | <https://cran.r-project.org/package=glmmTMB>               |
| glmnet                | 4.1-8         | <https://cran.r-project.org/package=glmnet>                |
| globals               | 0.16.3        | <https://cran.r-project.org/package=globals>               |
| glue                  | 1.8.0         | <https://cran.r-project.org/package=glue>                  |
| Gmisc                 | 3.0.3         | <https://cran.r-project.org/package=Gmisc>                 |
| gmm                   | 1.8           | <https://cran.r-project.org/package=gmm>                   |
| gnm                   | 1.1-5         | <https://cran.r-project.org/package=gnm>                   |
| googledrive           | 2.1.1         | <https://cran.r-project.org/package=googledrive>           |
| googlesheets4         | 1.1.1         | <https://cran.r-project.org/package=googlesheets4>         |
| gower                 | 1.0.2         | <https://cran.r-project.org/package=gower>                 |
| GPfit                 | 1.0-8         | <https://cran.r-project.org/package=GPfit>                 |
| gridExtra             | 2.3           | <https://cran.r-project.org/package=gridExtra>             |
| gridtext              | 0.1.5         | <https://cran.r-project.org/package=gridtext>              |
| gt                    | 0.11.1        | <https://cran.r-project.org/package=gt>                    |
| gtable                | 0.3.6         | <https://cran.r-project.org/package=gtable>                |
| gtsummary             | 2.1.0         | <https://cran.r-project.org/package=gtsummary>             |
| hardhat               | 1.4.1         | <https://cran.r-project.org/package=hardhat>               |
| haven                 | 2.5.4         | <https://cran.r-project.org/package=haven>                 |
| HDInterval            | 0.2.4         | <https://cran.r-project.org/package=HDInterval>            |
| hdrcde                | 3.4           | <https://cran.r-project.org/package=hdrcde>                |
| here                  | 1.0.1         | <https://cran.r-project.org/package=here>                  |
| hexbin                | 1.28.5        | <https://cran.r-project.org/package=hexbin>                |
| highr                 | 0.11          | <https://cran.r-project.org/package=highr>                 |
| Hmisc                 | 5.2-2         | <https://cran.r-project.org/package=Hmisc>                 |
| hms                   | 1.1.3         | <https://cran.r-project.org/package=hms>                   |
| htmlTable             | 2.4.3         | <https://cran.r-project.org/package=htmlTable>             |
| htmltools             | 0.5.8.1       | <https://cran.r-project.org/package=htmltools>             |
| htmlwidgets           | 1.6.4         | <https://cran.r-project.org/package=htmlwidgets>           |
| httpgd                | 2.0.3         | <https://cran.r-project.org/package=httpgd>                |
| httpuv                | 1.6.15        | <https://cran.r-project.org/package=httpuv>                |
| httr                  | 1.4.7         | <https://cran.r-project.org/package=httr>                  |
| httr2                 | 1.1.0         | <https://cran.r-project.org/package=httr2>                 |
| IDPmisc               | 1.1.21        | <https://cran.r-project.org/package=IDPmisc>               |
| ids                   | 1.0.1         | <https://cran.r-project.org/package=ids>                   |
| igraph                | 2.1.4         | <https://cran.r-project.org/package=igraph>                |
| incidence             | 1.7.5         | <https://cran.r-project.org/package=incidence>             |
| infer                 | 1.0.7         | <https://cran.r-project.org/package=infer>                 |
| ini                   | 0.3.1         | <https://cran.r-project.org/package=ini>                   |
| inline                | 0.3.21        | <https://cran.r-project.org/package=inline>                |
| insight               | 1.1.0         | <https://cran.r-project.org/package=insight>               |
| interactions          | 1.2.0         | <https://cran.r-project.org/package=interactions>          |
| interp                | 1.1-6         | <https://cran.r-project.org/package=interp>                |
| ipred                 | 0.9-15        | <https://cran.r-project.org/package=ipred>                 |
| isoband               | 0.2.7         | <https://cran.r-project.org/package=isoband>               |
| iterators             | 1.0.14        | <https://cran.r-project.org/package=iterators>             |
| janitor               | 2.2.1         | <https://cran.r-project.org/package=janitor>               |
| jomo                  | 2.7-6         | <https://cran.r-project.org/package=jomo>                  |
| jpeg                  | 0.1-10        | <https://cran.r-project.org/package=jpeg>                  |
| jquerylib             | 0.1.4         | <https://cran.r-project.org/package=jquerylib>             |
| jsonlite              | 1.9.1         | <https://cran.r-project.org/package=jsonlite>              |
| jtools                | 2.3.0         | <https://cran.r-project.org/package=jtools>                |
| juicyjuice            | 0.1.0         | <https://cran.r-project.org/package=juicyjuice>            |
| kableExtra            | 1.4.0         | <https://cran.r-project.org/package=kableExtra>            |
| kernlab               | 0.9-33        | <https://cran.r-project.org/package=kernlab>               |
| KernSmooth            | 2.23-26       | <https://cran.r-project.org/package=KernSmooth>            |
| km.ci                 | 0.5-6         | <https://cran.r-project.org/package=km.ci>                 |
| KMsurv                | 0.1-5         | <https://cran.r-project.org/package=KMsurv>                |
| knitr                 | 1.49          | <https://cran.r-project.org/package=knitr>                 |
| ks                    | 1.14.3        | <https://cran.r-project.org/package=ks>                    |
| labeling              | 0.4.3         | <https://cran.r-project.org/package=labeling>              |
| labelled              | 2.14.0        | <https://cran.r-project.org/package=labelled>              |
| languageserver        | 0.3.16        | <https://cran.r-project.org/package=languageserver>        |
| later                 | 1.4.1         | <https://cran.r-project.org/package=later>                 |
| lattice               | 0.22-6        | <https://cran.r-project.org/package=lattice>               |
| latticeExtra          | 0.6-30        | <https://cran.r-project.org/package=latticeExtra>          |
| lava                  | 1.8.1         | <https://cran.r-project.org/package=lava>                  |
| lazyeval              | 0.2.2         | <https://cran.r-project.org/package=lazyeval>              |
| lcmm                  | 2.2.1         | <https://cran.r-project.org/package=lcmm>                  |
| lhs                   | 1.2.0         | <https://cran.r-project.org/package=lhs>                   |
| lifecycle             | 1.0.4         | <https://cran.r-project.org/package=lifecycle>             |
| lintr                 | 3.2.0         | <https://cran.r-project.org/package=lintr>                 |
| listenv               | 0.9.1         | <https://cran.r-project.org/package=listenv>               |
| lme4                  | 1.1-36        | <https://cran.r-project.org/package=lme4>                  |
| lmtest                | 0.9-40        | <https://cran.r-project.org/package=lmtest>                |
| lobstr                | 1.1.2         | <https://cran.r-project.org/package=lobstr>                |
| locfit                | 1.5-9.11      | <https://cran.r-project.org/package=locfit>                |
| loo                   | 2.8.0         | <https://cran.r-project.org/package=loo>                   |
| lpSolveAPI            | 5.5.2.0-17.12 | <https://cran.r-project.org/package=lpSolveAPI>            |
| lubridate             | 1.9.4         | <https://cran.r-project.org/package=lubridate>             |
| magick                | 2.8.5         | <https://cran.r-project.org/package=magick>                |
| magrittr              | 2.0.3         | <https://cran.r-project.org/package=magrittr>              |
| marginaleffects       | 0.25.0        | <https://cran.r-project.org/package=marginaleffects>       |
| markdown              | 1.13          | <https://cran.r-project.org/package=markdown>              |
| marqLevAlg            | 2.0.8         | <https://cran.r-project.org/package=marqLevAlg>            |
| MASS                  | 7.3-65        | <https://cran.r-project.org/package=MASS>                  |
| MatchIt               | 4.7.0         | <https://cran.r-project.org/package=MatchIt>               |
| mathjaxr              | 1.6-0         | <https://cran.r-project.org/package=mathjaxr>              |
| Matrix                | 1.7-2         | <https://cran.r-project.org/package=Matrix>                |
| MatrixModels          | 0.5-3         | <https://cran.r-project.org/package=MatrixModels>          |
| matrixStats           | 1.5.0         | <https://cran.r-project.org/package=matrixStats>           |
| maxstat               | 0.7-25        | <https://cran.r-project.org/package=maxstat>               |
| mclust                | 6.1.1         | <https://cran.r-project.org/package=mclust>                |
| medflex               | 0.6-10        | <https://cran.r-project.org/package=medflex>               |
| memoise               | 2.0.1         | <https://cran.r-project.org/package=memoise>               |
| metadat               | 1.4-0         | <https://cran.r-project.org/package=metadat>               |
| metafor               | 4.8-0         | <https://cran.r-project.org/package=metafor>               |
| mets                  | 1.3.5         | <https://cran.r-project.org/package=mets>                  |
| mgcv                  | 1.9-1         | <https://cran.r-project.org/package=mgcv>                  |
| mice                  | 3.17.0        | <https://cran.r-project.org/package=mice>                  |
| microbenchmark        | 1.5.0         | <https://cran.r-project.org/package=microbenchmark>        |
| mime                  | 0.12          | <https://cran.r-project.org/package=mime>                  |
| minqa                 | 1.2.8         | <https://cran.r-project.org/package=minqa>                 |
| mitml                 | 0.4-5         | <https://cran.r-project.org/package=mitml>                 |
| mitools               | 2.4           | <https://cran.r-project.org/package=mitools>               |
| mlogit                | 1.1-1         | <https://cran.r-project.org/package=mlogit>                |
| modeldata             | 1.4.0         | <https://cran.r-project.org/package=modeldata>             |
| modelenv              | 0.2.0         | <https://cran.r-project.org/package=modelenv>              |
| ModelMetrics          | 1.2.2.2       | <https://cran.r-project.org/package=ModelMetrics>          |
| modelr                | 0.1.11        | <https://cran.r-project.org/package=modelr>                |
| modelsummary          | 2.3.0         | <https://cran.r-project.org/package=modelsummary>          |
| modeltools            | 0.2-23        | <https://cran.r-project.org/package=modeltools>            |
| msm                   | 1.8.2         | <https://cran.r-project.org/package=msm>                   |
| mstate                | 0.3.3         | <https://cran.r-project.org/package=mstate>                |
| muhaz                 | 1.2.6.4       | <https://cran.r-project.org/package=muhaz>                 |
| multcomp              | 1.4-28        | <https://cran.r-project.org/package=multcomp>              |
| multicool             | 1.0.1         | <https://cran.r-project.org/package=multicool>             |
| munsell               | 0.5.1         | <https://cran.r-project.org/package=munsell>               |
| mvtnorm               | 1.3-3         | <https://cran.r-project.org/package=mvtnorm>               |
| naniar                | 1.1.0         | <https://cran.r-project.org/package=naniar>                |
| NHPoisson             | 3.3           | <https://cran.r-project.org/package=NHPoisson>             |
| nleqslv               | 3.3.5         | <https://cran.r-project.org/package=nleqslv>               |
| nlme                  | 3.1-167       | <https://cran.r-project.org/package=nlme>                  |
| nloptr                | 2.1.1         | <https://cran.r-project.org/package=nloptr>                |
| nnet                  | 7.3-20        | <https://cran.r-project.org/package=nnet>                  |
| norm                  | 1.0-11.1      | <https://cran.r-project.org/package=norm>                  |
| numDeriv              | 2016.8-1.1    | <https://cran.r-project.org/package=numDeriv>              |
| openssl               | 2.3.2         | <https://cran.r-project.org/package=openssl>               |
| operator.tools        | 1.6.3         | <https://cran.r-project.org/package=operator.tools>        |
| optparse              | 1.7.5         | <https://cran.r-project.org/package=optparse>              |
| ordinal               | 2023.12-4.1   | <https://cran.r-project.org/package=ordinal>               |
| padr                  | 0.6.3         | <https://cran.r-project.org/package=padr>                  |
| pammtools             | 0.5.93        | <https://cran.r-project.org/package=pammtools>             |
| pan                   | 1.9           | <https://cran.r-project.org/package=pan>                   |
| pander                | 0.6.6         | <https://cran.r-project.org/package=pander>                |
| parallelly            | 1.42.0        | <https://cran.r-project.org/package=parallelly>            |
| parameters            | 0.24.2        | <https://cran.r-project.org/package=parameters>            |
| parglm                | 0.1.7         | <https://cran.r-project.org/package=parglm>                |
| parsnip               | 1.3.0         | <https://cran.r-project.org/package=parsnip>               |
| patchwork             | 1.3.0         | <https://cran.r-project.org/package=patchwork>             |
| pbapply               | 1.7-2         | <https://cran.r-project.org/package=pbapply>               |
| pbkrtest              | 0.5.3         | <https://cran.r-project.org/package=pbkrtest>              |
| pcaPP                 | 2.0-5         | <https://cran.r-project.org/package=pcaPP>                 |
| pch                   | 2.1           | <https://cran.r-project.org/package=pch>                   |
| pec                   | 2023.04.12    | <https://cran.r-project.org/package=pec>                   |
| performance           | 0.13.0        | <https://cran.r-project.org/package=performance>           |
| PerformanceAnalytics  | 2.0.8         | <https://cran.r-project.org/package=PerformanceAnalytics>  |
| permute               | 0.9-7         | <https://cran.r-project.org/package=permute>               |
| PHEindicatormethods   | 2.1.0         | <https://cran.r-project.org/package=PHEindicatormethods>   |
| pillar                | 1.10.1        | <https://cran.r-project.org/package=pillar>                |
| pkgbuild              | 1.4.6         | <https://cran.r-project.org/package=pkgbuild>              |
| pkgconfig             | 2.0.3         | <https://cran.r-project.org/package=pkgconfig>             |
| pkgload               | 1.4.0         | <https://cran.r-project.org/package=pkgload>               |
| plotly                | 4.10.4        | <https://cran.r-project.org/package=plotly>                |
| plotrix               | 3.8-4         | <https://cran.r-project.org/package=plotrix>               |
| plyr                  | 1.8.9         | <https://cran.r-project.org/package=plyr>                  |
| png                   | 0.1-8         | <https://cran.r-project.org/package=png>                   |
| polspline             | 1.1.25        | <https://cran.r-project.org/package=polspline>             |
| polynom               | 1.4-1         | <https://cran.r-project.org/package=polynom>               |
| posterior             | 1.6.1         | <https://cran.r-project.org/package=posterior>             |
| pracma                | 2.4.4         | <https://cran.r-project.org/package=pracma>                |
| predtools             | 0.0.3         | <https://cran.r-project.org/package=predtools>             |
| prettyunits           | 1.2.0         | <https://cran.r-project.org/package=prettyunits>           |
| pROC                  | 1.18.5        | <https://cran.r-project.org/package=pROC>                  |
| processx              | 3.8.6         | <https://cran.r-project.org/package=processx>              |
| prodlim               | 2024.06.25    | <https://cran.r-project.org/package=prodlim>               |
| progress              | 1.2.3         | <https://cran.r-project.org/package=progress>              |
| progressr             | 0.15.1        | <https://cran.r-project.org/package=progressr>             |
| promises              | 1.3.2         | <https://cran.r-project.org/package=promises>              |
| proxy                 | 0.4-27        | <https://cran.r-project.org/package=proxy>                 |
| ps                    | 1.9.0         | <https://cran.r-project.org/package=ps>                    |
| pscl                  | 1.5.9         | <https://cran.r-project.org/package=pscl>                  |
| pseudo                | 1.4.3         | <https://cran.r-project.org/package=pseudo>                |
| Publish               | 2023.01.17    | <https://cran.r-project.org/package=Publish>               |
| purrr                 | 1.0.4         | <https://cran.r-project.org/package=purrr>                 |
| pyinit                | 1.1.3         | <https://cran.r-project.org/package=pyinit>                |
| qap                   | 0.1-2         | <https://cran.r-project.org/package=qap>                   |
| qgam                  | 1.3.4         | <https://cran.r-project.org/package=qgam>                  |
| quadprog              | 1.5-8         | <https://cran.r-project.org/package=quadprog>              |
| quantmod              | 0.4.26        | <https://cran.r-project.org/package=quantmod>              |
| quantreg              | 6.00          | <https://cran.r-project.org/package=quantreg>              |
| QuickJSR              | 1.6.0         | <https://cran.r-project.org/package=QuickJSR>              |
| qvcalc                | 1.0.4         | <https://cran.r-project.org/package=qvcalc>                |
| R.cache               | 0.16.0        | <https://cran.r-project.org/package=R.cache>               |
| R.methodsS3           | 1.8.2         | <https://cran.r-project.org/package=R.methodsS3>           |
| R.oo                  | 1.27.0        | <https://cran.r-project.org/package=R.oo>                  |
| R.utils               | 2.13.0        | <https://cran.r-project.org/package=R.utils>               |
| R6                    | 2.6.1         | <https://cran.r-project.org/package=R6>                    |
| ragg                  | 1.3.3         | <https://cran.r-project.org/package=ragg>                  |
| rainbow               | 3.8           | <https://cran.r-project.org/package=rainbow>               |
| randomForest          | 4.7-1.2       | <https://cran.r-project.org/package=randomForest>          |
| randomForestExplainer | 0.10.1        | <https://cran.r-project.org/package=randomForestExplainer> |
| ranger                | 0.17.0        | <https://cran.r-project.org/package=ranger>                |
| rappdirs              | 0.3.3         | <https://cran.r-project.org/package=rappdirs>              |
| rbibutils             | 2.3           | <https://cran.r-project.org/package=rbibutils>             |
| RColorBrewer          | 1.1-3         | <https://cran.r-project.org/package=RColorBrewer>          |
| RConics               | 1.1.2         | <https://cran.r-project.org/package=RConics>               |
| Rcpp                  | 1.0.14        | <https://cran.r-project.org/package=Rcpp>                  |
| RcppArmadillo         | 14.2.3-1      | <https://cran.r-project.org/package=RcppArmadillo>         |
| RcppEigen             | 0.3.4.0.2     | <https://cran.r-project.org/package=RcppEigen>             |
| RcppParallel          | 5.1.10        | <https://cran.r-project.org/package=RcppParallel>          |
| RcppProgress          | 0.4.2         | <https://cran.r-project.org/package=RcppProgress>          |
| RcppRoll              | 0.3.1         | <https://cran.r-project.org/package=RcppRoll>              |
| RcppThread            | 2.2.0         | <https://cran.r-project.org/package=RcppThread>            |
| RCurl                 | 1.98-1.16     | <https://cran.r-project.org/package=RCurl>                 |
| Rdpack                | 2.6.2         | <https://cran.r-project.org/package=Rdpack>                |
| rdrobust              | 2.2           | <https://cran.r-project.org/package=rdrobust>              |
| reactable             | 0.4.4         | <https://cran.r-project.org/package=reactable>             |
| reactR                | 0.6.1         | <https://cran.r-project.org/package=reactR>                |
| readr                 | 2.1.5         | <https://cran.r-project.org/package=readr>                 |
| readxl                | 1.4.4         | <https://cran.r-project.org/package=readxl>                |
| recipes               | 1.1.1         | <https://cran.r-project.org/package=recipes>               |
| reformulas            | 0.4.0         | <https://cran.r-project.org/package=reformulas>            |
| registry              | 0.5-1         | <https://cran.r-project.org/package=registry>              |
| relimp                | 1.0-5         | <https://cran.r-project.org/package=relimp>                |
| relsurv               | 2.3-2         | <https://cran.r-project.org/package=relsurv>               |
| rematch               | 2.0.0         | <https://cran.r-project.org/package=rematch>               |
| rematch2              | 2.1.2         | <https://cran.r-project.org/package=rematch2>              |
| repr                  | 1.1.7         | <https://cran.r-project.org/package=repr>                  |
| reprex                | 2.1.1         | <https://cran.r-project.org/package=reprex>                |
| reshape2              | 1.4.4         | <https://cran.r-project.org/package=reshape2>              |
| rex                   | 1.2.1         | <https://cran.r-project.org/package=rex>                   |
| riskRegression        | 2023.12.21    | <https://cran.r-project.org/package=riskRegression>        |
| rlang                 | 1.1.5         | <https://cran.r-project.org/package=rlang>                 |
| rmarkdown             | 2.29          | <https://cran.r-project.org/package=rmarkdown>             |
| rms                   | 7.0-0         | <https://cran.r-project.org/package=rms>                   |
| RobStatTM             | 1.0.11        | <https://cran.r-project.org/package=RobStatTM>             |
| robustbase            | 0.99-4-1      | <https://cran.r-project.org/package=robustbase>            |
| ROI                   | 1.0-1         | <https://cran.r-project.org/package=ROI>                   |
| ROI.plugin.lpsolve    | 1.0-2         | <https://cran.r-project.org/package=ROI.plugin.lpsolve>    |
| roxygen2              | 7.3.2         | <https://cran.r-project.org/package=roxygen2>              |
| rpart                 | 4.1.24        | <https://cran.r-project.org/package=rpart>                 |
| rpart.plot            | 3.1.2         | <https://cran.r-project.org/package=rpart.plot>            |
| rprojroot             | 2.0.4         | <https://cran.r-project.org/package=rprojroot>             |
| rrcov                 | 1.7-6         | <https://cran.r-project.org/package=rrcov>                 |
| rsample               | 1.2.1         | <https://cran.r-project.org/package=rsample>               |
| RSpectra              | 0.16-2        | <https://cran.r-project.org/package=RSpectra>              |
| rstan                 | 2.32.6        | <https://cran.r-project.org/package=rstan>                 |
| rstantools            | 2.4.0         | <https://cran.r-project.org/package=rstantools>            |
| rstatix               | 0.7.2         | <https://cran.r-project.org/package=rstatix>               |
| rstpm2                | 1.6.6.1       | <https://cran.r-project.org/package=rstpm2>                |
| rstudioapi            | 0.17.1        | <https://cran.r-project.org/package=rstudioapi>            |
| rvest                 | 1.0.4         | <https://cran.r-project.org/package=rvest>                 |
| s2                    | 1.1.7         | <https://cran.r-project.org/package=s2>                    |
| sandwich              | 3.1-1         | <https://cran.r-project.org/package=sandwich>              |
| sass                  | 0.4.9         | <https://cran.r-project.org/package=sass>                  |
| scales                | 1.3.0         | <https://cran.r-project.org/package=scales>                |
| SCCS                  | 1.7           | <https://cran.r-project.org/package=SCCS>                  |
| secretbase            | 1.0.5         | <https://cran.r-project.org/package=secretbase>            |
| segmented             | 2.1-4         | <https://cran.r-project.org/package=segmented>             |
| selectr               | 0.4-2         | <https://cran.r-project.org/package=selectr>               |
| seriation             | 1.5.7         | <https://cran.r-project.org/package=seriation>             |
| sf                    | 1.0-19        | <https://cran.r-project.org/package=sf>                    |
| sfd                   | 0.1.0         | <https://cran.r-project.org/package=sfd>                   |
| shades                | 1.4.0         | <https://cran.r-project.org/package=shades>                |
| shape                 | 1.4.6.1       | <https://cran.r-project.org/package=shape>                 |
| shapviz               | 0.9.7         | <https://cran.r-project.org/package=shapviz>               |
| shiny                 | 1.10.0        | <https://cran.r-project.org/package=shiny>                 |
| shinyjs               | 2.1.0         | <https://cran.r-project.org/package=shinyjs>               |
| sjlabelled            | 1.2.0         | <https://cran.r-project.org/package=sjlabelled>            |
| sjmisc                | 2.8.10        | <https://cran.r-project.org/package=sjmisc>                |
| sjPlot                | 2.8.17        | <https://cran.r-project.org/package=sjPlot>                |
| sjstats               | 0.19.0        | <https://cran.r-project.org/package=sjstats>               |
| skimr                 | 2.1.5         | <https://cran.r-project.org/package=skimr>                 |
| slam                  | 0.1-55        | <https://cran.r-project.org/package=slam>                  |
| slider                | 0.3.2         | <https://cran.r-project.org/package=slider>                |
| snakecase             | 0.11.1        | <https://cran.r-project.org/package=snakecase>             |
| sourcetools           | 0.1.7-1       | <https://cran.r-project.org/package=sourcetools>           |
| sp                    | 2.2-0         | <https://cran.r-project.org/package=sp>                    |
| spacefillr            | 0.4.0         | <https://cran.r-project.org/package=spacefillr>            |
| SparseM               | 1.84-2        | <https://cran.r-project.org/package=SparseM>               |
| sparsevctrs           | 0.2.0         | <https://cran.r-project.org/package=sparsevctrs>           |
| speedglm              | 0.3-5         | <https://cran.r-project.org/package=speedglm>              |
| splines2              | 0.5.4         | <https://cran.r-project.org/package=splines2>              |
| SQUAREM               | 2021.1        | <https://cran.r-project.org/package=SQUAREM>               |
| StanHeaders           | 2.32.10       | <https://cran.r-project.org/package=StanHeaders>           |
| statmod               | 1.5.0         | <https://cran.r-project.org/package=statmod>               |
| stringdist            | 0.9.15        | <https://cran.r-project.org/package=stringdist>            |
| stringi               | 1.8.4         | <https://cran.r-project.org/package=stringi>               |
| stringr               | 1.5.1         | <https://cran.r-project.org/package=stringr>               |
| styler                | 1.10.3        | <https://cran.r-project.org/package=styler>                |
| survey                | 4.4-2         | <https://cran.r-project.org/package=survey>                |
| survival              | 3.8-3         | <https://cran.r-project.org/package=survival>              |
| survminer             | 0.5.0         | <https://cran.r-project.org/package=survminer>             |
| survMisc              | 0.5.6         | <https://cran.r-project.org/package=survMisc>              |
| svglite               | 2.1.3         | <https://cran.r-project.org/package=svglite>               |
| sweep                 | 0.2.5         | <https://cran.r-project.org/package=sweep>                 |
| sys                   | 3.4.3         | <https://cran.r-project.org/package=sys>                   |
| systemfonts           | 1.2.1         | <https://cran.r-project.org/package=systemfonts>           |
| tables                | 0.9.31        | <https://cran.r-project.org/package=tables>                |
| targets               | 1.10.1        | <https://cran.r-project.org/package=targets>               |
| tensorA               | 0.36.2.1      | <https://cran.r-project.org/package=tensorA>               |
| textshaping           | 1.0.0         | <https://cran.r-project.org/package=textshaping>           |
| TH.data               | 1.1-3         | <https://cran.r-project.org/package=TH.data>               |
| tibble                | 3.2.1         | <https://cran.r-project.org/package=tibble>                |
| tictoc                | 1.2.1         | <https://cran.r-project.org/package=tictoc>                |
| tidycmprsk            | 1.1.0         | <https://cran.r-project.org/package=tidycmprsk>            |
| tidymodels            | 1.3.0         | <https://cran.r-project.org/package=tidymodels>            |
| tidypredict           | 0.5.1         | <https://cran.r-project.org/package=tidypredict>           |
| tidyquant             | 1.0.11        | <https://cran.r-project.org/package=tidyquant>             |
| tidyr                 | 1.3.1         | <https://cran.r-project.org/package=tidyr>                 |
| tidyselect            | 1.2.1         | <https://cran.r-project.org/package=tidyselect>            |
| tidyverse             | 2.0.0         | <https://cran.r-project.org/package=tidyverse>             |
| timechange            | 0.3.0         | <https://cran.r-project.org/package=timechange>            |
| timeDate              | 4041.110      | <https://cran.r-project.org/package=timeDate>              |
| timereg               | 2.0.6         | <https://cran.r-project.org/package=timereg>               |
| timetk                | 2.9.0         | <https://cran.r-project.org/package=timetk>                |
| tinytable             | 0.7.0         | <https://cran.r-project.org/package=tinytable>             |
| tinytex               | 0.56          | <https://cran.r-project.org/package=tinytex>               |
| TMB                   | 1.9.16        | <https://cran.r-project.org/package=TMB>                   |
| tmvtnorm              | 1.6           | <https://cran.r-project.org/package=tmvtnorm>              |
| TrialEmulation        | 0.0.4.2       | <https://cran.r-project.org/package=TrialEmulation>        |
| tseries               | 0.10-58       | <https://cran.r-project.org/package=tseries>               |
| tsfeatures            | 1.1.1         | <https://cran.r-project.org/package=tsfeatures>            |
| tsModel               | 0.6-2         | <https://cran.r-project.org/package=tsModel>               |
| TSP                   | 1.2-4         | <https://cran.r-project.org/package=TSP>                   |
| TTR                   | 0.24.4        | <https://cran.r-project.org/package=TTR>                   |
| tune                  | 1.3.0         | <https://cran.r-project.org/package=tune>                  |
| twopartm              | 0.1.0         | <https://cran.r-project.org/package=twopartm>              |
| tzdb                  | 0.4.0         | <https://cran.r-project.org/package=tzdb>                  |
| ucminf                | 1.2.2         | <https://cran.r-project.org/package=ucminf>                |
| unigd                 | 0.1.3         | <https://cran.r-project.org/package=unigd>                 |
| units                 | 0.8-5         | <https://cran.r-project.org/package=units>                 |
| UpSetR                | 1.4.0         | <https://cran.r-project.org/package=UpSetR>                |
| urca                  | 1.3-4         | <https://cran.r-project.org/package=urca>                  |
| utf8                  | 1.2.4         | <https://cran.r-project.org/package=utf8>                  |
| uuid                  | 1.2-1         | <https://cran.r-project.org/package=uuid>                  |
| V8                    | 6.0.1         | <https://cran.r-project.org/package=V8>                    |
| vcd                   | 1.4-13        | <https://cran.r-project.org/package=vcd>                   |
| vctrs                 | 0.6.5         | <https://cran.r-project.org/package=vctrs>                 |
| vegan                 | 2.6-10        | <https://cran.r-project.org/package=vegan>                 |
| VGAM                  | 1.1-13        | <https://cran.r-project.org/package=VGAM>                  |
| viridis               | 0.6.5         | <https://cran.r-project.org/package=viridis>               |
| viridisLite           | 0.4.2         | <https://cran.r-project.org/package=viridisLite>           |
| visdat                | 0.6.0         | <https://cran.r-project.org/package=visdat>                |
| visNetwork            | 2.1.2         | <https://cran.r-project.org/package=visNetwork>            |
| vroom                 | 1.6.5         | <https://cran.r-project.org/package=vroom>                 |
| warp                  | 0.2.1         | <https://cran.r-project.org/package=warp>                  |
| WeightIt              | 1.4.0         | <https://cran.r-project.org/package=WeightIt>              |
| withr                 | 3.0.2         | <https://cran.r-project.org/package=withr>                 |
| wk                    | 0.9.4         | <https://cran.r-project.org/package=wk>                    |
| workflows             | 1.2.0         | <https://cran.r-project.org/package=workflows>             |
| workflowsets          | 1.1.0         | <https://cran.r-project.org/package=workflowsets>          |
| xfun                  | 0.51          | <https://cran.r-project.org/package=xfun>                  |
| xgboost               | 1.7.8.1       | <https://cran.r-project.org/package=xgboost>               |
| XML                   | 3.99-0.18     | <https://cran.r-project.org/package=XML>                   |
| xml2                  | 1.3.7         | <https://cran.r-project.org/package=xml2>                  |
| xmlparsedata          | 1.0.5         | <https://cran.r-project.org/package=xmlparsedata>          |
| xtable                | 1.8-4         | <https://cran.r-project.org/package=xtable>                |
| xts                   | 0.14.1        | <https://cran.r-project.org/package=xts>                   |
| yaml                  | 2.3.10        | <https://cran.r-project.org/package=yaml>                  |
| yardstick             | 1.3.2         | <https://cran.r-project.org/package=yardstick>             |
| zip                   | 2.3.2         | <https://cran.r-project.org/package=zip>                   |
| zoo                   | 1.8-13        | <https://cran.r-project.org/package=zoo>                   |
